--- a/accounts/static/accounts/css/login.css
+++ b/accounts/static/accounts/css/login.css
@@ -7,6 +7,7 @@ body {
     background-color: #3d494f;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 .login-container {
@@ -114,4 +115,24 @@ button:hover {
     button {
         font-size: 0.9rem;
     }
+}
+
+/*format texte*/
+/* Personnalisation supplémentaire si nécessaire */
+body {
+    background-color: #3d494f;
+}
+
+.card {
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+}
+
+.btn-primary {
+    background-color: #0c5460;
+    border-color: #0c5460;
+}
+
+.btn-primary:hover {
+    background-color: #0a4b55;
+    border-color: #0a4b55;
 }
